# fastapi-users

./: Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2025_09_10_1004-79689cde7ef9_create_users_table.py  2025_09_10_1011-373d014da058_update_users_table.py  2025_09_29_1630-72981243d4a6_create_user_table.py  2025_09_29_1718-e1c401345307_create_access_token.py
app/api/api_v1/: __init__.py  users.py
app/api/dependencies/: access_tokens.py  strategy.py  users.py
app/core/: config.py
app/core/authentication/: transport.py
app/core/models/: access_token.py  base.py  db_helper.py  user.py
app/core/schemas/: user.py
app/crud/: users.py
core/: config.py
