[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.116.1"}
pydantic-settings = "^2.10.1"
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
alembic = "^1.16.5"
pydantic = "^2.11.7"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

